--- a/templates/index.html
+++ b/templates/index.html
@@ -31620,7 +31620,7 @@
 					<!-- // HEADER BLOCK -->
 				</div>
 
-				<a href="/karubot">
+				<a href="/kyubot">
 					<button class="floating-button">
 						<img src="../static/images/kyubot.jpg" alt="Button icon">
 					</button>
